--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,21 @@
-version: "3"
+version: '3'
 services:
-  ubuntu:
-    image: ubuntu:latest
-    user: pimeys
-    volumes:
-      - /home/pimeys/code:/code
-    networks:
-      - test-env
+  # ubuntu:
+  #   image: ubuntu-test
+  #   user: pimeys
+  #   volumes:
+  #     - /home/pimeys/code:/code
+  #   networks:
+  #     - test-env
 
   chinook:
     image: postgres:13
     restart: always
     command: postgres -c 'max_connections=100'
     environment:
-      POSTGRES_PASSWORD: "prisma"
+      POSTGRES_PASSWORD: 'prisma'
     ports:
-      - "5432:5432"
+      - '5432:5432'
     networks:
       - test-env
     volumes:
